# npeg-core

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compile_commands.json  img.pbm  meson.build  x86_64-w64-mingw32.txt
include/: die.h  threads_utils.h  types.h
scripts/: format.sh  lint.sh
src/: meson.build  npeg.h
src/algorithms/: algorithms.h  interpolate.c  meson.build  rotate.c
src/img/: img.h  meson.build
src/img/img/: _cast_formats.c  _img.h  img.c  img_type.c  img_type.h  magic.h
src/img/pbm/: pbm.c  pbm.h
src/math/: matrix.c  matrix.h  meson.build  trig.h
subprojects/: criterion.wrap
tests/: assets.h  meson.build  test_img_read.c  test_img_rotate.c  test_matrix.c
tests/imgs/ascii/: small_sample1.pbm  small_sample1.pgm  small_sample1.ppm  small_sample1_rotated.pbm
tests/imgs/raw/: small_sample1.pam  small_sample1.pbm  small_sample1.pgm  small_sample1.ppm
